2003-09-26  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (file_contents_internal): Do not add newlines before
	empty actions.
	Report from Bruno Haible.

2003-09-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in: Bump version to 1.7.7a.

	* configure.in, NEWS: Bump version to 1.7.7.

2003-09-05  Paul Eggert  <eggert@twinsun.com>

	* NEWS, aclocal.in, automake.in, automake.texi,
	lib/Automake/Channels.pm, lib/am/dejagnu.am, lib/am/depend.am,
	lib/am/lisp.am, lib/am/remake-hdr.am, lib/am/texi-vers.am,
	lib/ansi2knr.c, lib/depcomp, lib/missing, lib/py-compile,
	m4/obsolete.m4, m4/python.m4, tests/backsl4.test,
	tests/cond12.test, tests/defs.in, tests/dejagnu7.test,
	tests/depacl2.test, tests/dirlist.test, tests/error.test,
	tests/getopt.test, tests/gnuwarn.test, tests/include2.test,
	tests/libobj10.test, tests/libtool5.test, tests/libtool6.test,
	tests/lisp3.test, tests/phony.test, tests/pr220.test,
	tests/subcond2.test, tests/subcond3.test, tests/vtexi.test:
	Spelling and minor grammar fixes.

2003-09-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in: Bump version to 1.7.6c.

	* configure.in, NEWS: Bump version to 1.7.6b.

2003-09-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/config.sub, lib/config.guess, lib/texinfo.tex,
	lib/config-ml.in, lib/symlink-tree: New upstream versions.

2003-08-31  Thien-Thi Nguyen  <ttn@gnu.org>  (tiny change)

	* tests/yacc7.test: Require bison.

2003-08-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Extending aclocal): Merge changes from HEAD, to
	explain that aclocal 1.8 will warn about underquoted AC_DEFUN.

2003-08-25  Alexandre Duret-Lutz  <adl@gnu.org>

	For Debian Bug #206299:
	* automake.in (parse_arguments): Ignore --no-force.
	* automake.texi (Invoking Automake): Document this.
	* tests/distcom6.test: New file.  Report from Scott James Remnant.
	* tests/Makefile.am (TESTS): Add distcom6.test.

2003-08-13  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/399: