@@ -144,15 +144,16 @@ install-info-am: $(INFO_DEPS)
 	@$(POST_INSTALL)
 ## Only run this code if install-info actually exists, and it is not
 ## the Debian install-info.  FIXME: once Debian install-info goes
-## away, we can remove this hack.  Debian install-info v1.8.3
-## prints version info to stderr.
+## away, we can remove this hack.  Some versions of Debian install-info
+## print their version on stderr (e.g. 1.8.3), other do it in
+## on stdout (e.g. 1.10.15).
 ##
 ## Do not use
-##    install-info --version 2>&1 | sed 1q | grep -s -v -i debian
+##    install-info --version 2>&1 | sed 1q | grep -v -i debian
 ## as if install-info does not exist, grep -v will be happy, and
 ## therefore the code will be triggered although install-info is missing.
 	@if (install-info --version && \
-	     install-info --version | grep -i -v debian) >/dev/null 2>&1; then \
+	     install-info --version 2>&1 | sed 1q | grep -i -v debian) >/dev/null 2>&1; then \
 	  list='$(INFO_DEPS)'; \
 	  for file in $$list; do \
 ## Strip directory
@@ -187,10 +188,9 @@ if %?LOCAL-TEXIS%
 uninstall-info-am:
 	$(PRE_UNINSTALL)
 ## Run two loops here so that we can handle PRE_UNINSTALL and
-## NORMAL_UNINSTALL correctly.  Debian install-info v1.8.3 prints
-## version info to stderr.
+## NORMAL_UNINSTALL correctly.
 	@if (install-info --version && \
-	     install-info --version | grep -i -v debian) >/dev/null 2>&1; then \
+	     install-info --version 2>&1 | sed 1q | grep -i -v debian) >/dev/null 2>&1; then \
 	  list='$(INFO_DEPS)'; \
 	  for file in $$list; do \
 	    relfile=`echo "$$file" | sed 's|^.*/||'`; \
