@@ -1,3 +1,11 @@
+2003-10-03  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	For Debian Bug #213524:
+	* lib/am/texinfos.am (install-info-am, uninstall-info-am): Merge
+	stderr and stdout, and grep only the first line while testing
+	install-info --version's output.  This revert part of the change
+	from 2001-05-18.
+
 2003-09-26  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.in (file_contents_internal): Do not add newlines before
